# examples

./: .gitignore
dotnet-external/: .env.example  DotnetExternal.csproj  Program.cs  README.md  appsettings.json
dotnet-internal/: .env.example  Program.cs  README.md  appsettings.json
flutter-external/: .env.example  .metadata  README.md  pubspec.yaml
flutter-internal/: .env.example  README.md  pubspec.yaml
go-external/: .env.example  README.md  config.go  go.mod  hmac_service.go  identity.go  main.go  session.go
go-internal/: .env.example  README.md  config.go  crypto.go  go.mod  identity.go  main.go  models.go
python-external/: .env.example  README.md  app.py  config.py  hmac_service.py  identity.py  main.py  pyproject.toml  session.py
python-internal/: .env.example  README.md  app.py  config.py  crypto_utils.py  identity.py  main.py  models.py  pyproject.toml
rust-external/: .env.example  Cargo.toml  README.md
rust-external/src/: config.rs  hmac_service.rs  identity.rs  main.rs
rust-external/static/: index.html
rust-internal/: .env.example  Cargo.toml  README.md
rust-wasm-angular-external/: Cargo.toml  README.md  angular.json  build.sh  package-lock.json  package.json  proxy.js  vite.config.ts
rust-wasm-angular-internal/: Cargo.toml  README.md  angular.json  build.sh  package-lock.json  package.json  proxy.js
rust-wasm-external/: .env.example  .gitignore  Cargo.toml  README.md  build.sh  proxy-server.js
rust-wasm-external/src/: lib.rs
rust-wasm-external/www/: app.js  index.html
rust-wasm-internal/: Cargo.toml  README.md  build.sh  (+1 more)
(+72 files in other folders)
