[package]
name = "rust-wasm-external"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
aes-gcm = "0.10"
p256 = { version = "0.13", features = ["ecdh"] }
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "js"] }
hex = "0.4"
hmac = "0.12"
web-sys = { version = "0.3", features = ["Window", "Storage", "console", "Request", "RequestInit", "Response", "Headers"] }

[profile.release]
opt-level = "z"
lto = true
